added few changes in index and app component and tested to understand the flow

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-hello-world>fefef</app-hello-world>
+  <app-root>dfeeef</app-root>
+
+  <h1>Hahahaha</h1>
+
+  <app-root>dknkdnf</app-root>
+
+  <h1>Hohohoho</h1>
+
+  <app-hello-world>fefef</app-hello-world>
+
 </body>
 </html>
